# upim

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
applications/upim-contact/: Cargo.toml
applications/upim-contact/src/: args.rs  config.rs  contact.rs  either.rs  error.rs  filter.rs  main.rs
applications/upim-edit/: Cargo.toml
applications/upim-edit/src/: args.rs  main.rs
applications/upim-edit/tests/: cli.rs
config/: upim-contact.conf  upim-edit.conf  upim.conf
docs/manpages/: Makefile  upim-conf.5.md  upim-conf.5.scdoc  upim-contact.1.md  upim-contact.1.scdoc  upim-edit.1.md  upim-edit.1.scdoc  upim.7.md  upim.7.scdoc  view.sh
templates/: Contacts.template  Recipes.template
upim-core/: Cargo.toml
upim-core/src/: lib.rs
upim-core/src/upim_core/: config.rs  error.rs  mod.rs  paths.rs  uniq.rs
upim-note/: Cargo.toml
upim-note/src/: lib.rs
