[package]
name = "upim-contact"
version = "0.1.0"
authors = ["Ryan Frame <code@ryanjframe.com>"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
upim-core = { path = "../../upim-core" }
upim-note = { path = "../../upim-note" }
anyhow = "1.0.38"
multimap = { version = "0.8.2", default-features = false }
walkdir = "2.3.1"
